--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    
+@import url("https://fonts.googleapis.com/css2?family=Italiana&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 :root {
-    --primary-color: #1C6000;
-    --heading-color : #E9E9E9;
+  --primary-color: #1c6000;
+  --heading-color: #e9e9e9;
 }
-
 
 /*custom fonts importing*/
 /*KOHINOOR TELUGU*/
 @font-face {
-    font-family: 'kohinoor';
-    src: url('/public/fonts/FontsFree-Net-KohinoorTelugu-Medium.ttf')format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "kohinoor";
+  src: url("/public/fonts/FontsFree-Net-KohinoorTelugu-Medium.ttf")
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
 
 /*Italiana*/
 
 .italiana-regular {
-  font-family: "Italiana", sans-serif;
   font-weight: 400;
   font-style: normal;
+}
+
+h1,
+h2 {
+  font-family: "Italiana", sans-serif;
+}
+p {
+  font-family: "kohinoor";
 }
