--- a/src/index.css
+++ b/src/index.css
@@ -26,10 +26,10 @@
   font-style: normal;
 }
 
-h1,
-h2 {
-  font-family: "Italiana", sans-serif;
+ul li a{
+  text-decoration: none;
+  color: inherit;
+  
 }
-p {
-  font-family: "kohinoor";
-}
+
+
