updated wedding page

--- a/src/components/about/AboutUs.css
+++ b/src/components/about/AboutUs.css
@@ -29,6 +29,7 @@
   font-size: 40px;
   line-height: 1.3em;
   color: #fff;
+   font-family: "Italiana", sans-serif;
 }
 
 .about-us-first-contents p {
