--- a/src/components/booking/Booking.css
+++ b/src/components/booking/Booking.css
@@ -1,9 +1,10 @@
 .booking-section-container {
-  height: 80vh;
+  height: 100vh;
   width: 100%;
   background-color: black;
   display: flex;
   justify-content: space-around;
+  align-items: center;
   
 }
 
@@ -20,7 +21,7 @@
   position: absolute;
   height: 350px;
   width: 562px;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(99, 97, 97);
   opacity: 10%;
   z-index: 1;
 }
@@ -153,7 +154,7 @@
   transform: translateY(0);
 }
 
-/* Responsive Design */
+/* mediaQueries */
 @media (max-width: 768px) {
   .booking-section-container {
     flex-direction: column;
@@ -176,8 +177,9 @@
   }
 
   .wedding-img img {
-    height: 300px;
-    width: 200px;
+    height: 400px;
+    width: 400px;
+    margin-top: 42%;
   }
 
   .form-row {
