--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -109,7 +109,7 @@
   .contact-info {
     flex-direction: column;
     align-items: center;
-    text-align: center;
+    /* text-align: center; */
   }
 
   .info-box {
