updated wedding page images

--- a/src/components/home/EventGallery.css
+++ b/src/components/home/EventGallery.css
@@ -43,7 +43,7 @@
 
 .gallery-button {
   padding: 12px 20px;
-  font-family: "Italiana", sans-serif;
+  font-family: "kohinoor";
   background-color: #2e2e2e;
   border: none;
   color: #ffffff;
