--- a/src/components/home/FoodBooking.css
+++ b/src/components/home/FoodBooking.css
@@ -6,7 +6,7 @@
   padding: 50px 10%;
   gap: 50px;
   color: #fff;
-  min-height: 70vh;
+  min-height: 70vh;   
 }
 
 /* Left: Carousel */
@@ -55,6 +55,7 @@
   font-size: 12px;
   letter-spacing: 2px;
   margin-bottom: 10px;
+  font-family: "Italiana", sans-serif;
 }
 
 .food-content h2 {
@@ -62,6 +63,7 @@
   font-weight: 400;
   line-height: 1.4;
   margin-bottom: 20px;
+  font-family: "Italiana", sans-serif;
 }
 
 .book-btn {
